--- a/action.yml
+++ b/action.yml
@@ -1,21 +1,21 @@
-name: 'Deploy to Server'
-description: 'Deploy Docker image to a remote server and manage containers'
-author: 'Chester Ip'
+name: "Deploy to Server"
+description: "Deploy Docker image to a remote server and manage containers"
+author: "Chester Ip"
 inputs:
   docker_tag:
-    description: 'Docker image tag'
+    description: "Docker image tag"
     required: true
   ssh_host:
-    description: 'SSH host'
+    description: "SSH host"
     required: true
   ssh_username:
-    description: 'SSH username'
+    description: "SSH username"
     required: true
   ssh_private_key:
-    description: 'SSH private key'
+    description: "SSH private key"
     required: true
   template_path:
-    description: 'Path to the template'
+    description: "Path to the template"
     required: true
 
 runs:
@@ -30,10 +30,10 @@ runs:
           $docroot = "/usr/local/emhttp";
 
           require_once "$docroot/plugins/dynamix.docker.manager/include/DockerClient.php";
-          
+
           $var = parse_ini_file("/var/local/emhttp/var.ini");
           $cfg = parse_ini_file("/boot/config/docker.cfg");
-          
+
           $driver = DockerUtil::driver();
           $custom = DockerUtil::custom();
           $subnet = DockerUtil::network($custom);
@@ -69,9 +69,11 @@ runs:
 
           OLD_IMAGES=$(docker images | grep '<none>' | grep "$DOCKER_TAG" | grep -Eo '[0-9a-f]{12}' | tr '\n' ' ')
 
-          docker image rm $OLD_IMAGES
-          echo "Removed old images"
+          if [ OLD_IMAGES ]; then
+          docker image rm $OLD_IMAGES;
+          echo "Removed old images";
+          fi
 
 branding:
-  icon: 'server'
-  color: 'blue'
+  icon: "server"
+  color: "blue"
